@@ -16,13 +16,9 @@
  */
 package org.apache.dubbo.common.utils;
 
-import javassist.CtClass;
-import javassist.CtConstructor;
-import javassist.CtMethod;
-import javassist.NotFoundException;
-
 import java.beans.BeanInfo;
 import java.beans.Introspector;
+import java.beans.MethodDescriptor;
 import java.lang.reflect.Array;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
@@ -31,6 +27,7 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
+import java.lang.reflect.TypeVariable;
 import java.net.URL;
 import java.security.CodeSource;
 import java.security.ProtectionDomain;
@@ -43,14 +40,17 @@ import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.Future;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import javassist.CtClass;
+import javassist.CtConstructor;
+import javassist.CtMethod;
+import javassist.NotFoundException;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.unmodifiableSet;
@@ -120,21 +120,19 @@ public final class ReflectUtils {
 
     public static final Pattern DESC_PATTERN = Pattern.compile(DESC_REGEX);
 
-    public static final String METHOD_DESC_REGEX = "(?:(" + JAVA_IDENT_REGEX + ")?\\((" + DESC_REGEX + "*)\\)(" + DESC_REGEX + ")?)";
+    public static final String METHOD_DESC_REGEX =
+            "(?:(" + JAVA_IDENT_REGEX + ")?\\((" + DESC_REGEX + "*)\\)(" + DESC_REGEX + ")?)";
 
     public static final Pattern METHOD_DESC_PATTERN = Pattern.compile(METHOD_DESC_REGEX);
 
-    public static final Pattern GETTER_METHOD_DESC_PATTERN = Pattern.compile("get([A-Z][_a-zA-Z0-9]*)\\(\\)(" + DESC_REGEX + ")");
+    public static final Pattern GETTER_METHOD_DESC_PATTERN =
+            Pattern.compile("get([A-Z][_a-zA-Z0-9]*)\\(\\)(" + DESC_REGEX + ")");
 
-    public static final Pattern SETTER_METHOD_DESC_PATTERN = Pattern.compile("set([A-Z][_a-zA-Z0-9]*)\\((" + DESC_REGEX + ")\\)V");
+    public static final Pattern SETTER_METHOD_DESC_PATTERN =
+            Pattern.compile("set([A-Z][_a-zA-Z0-9]*)\\((" + DESC_REGEX + ")\\)V");
 
-    public static final Pattern IS_HAS_CAN_METHOD_DESC_PATTERN = Pattern.compile("(?:is|has|can)([A-Z][_a-zA-Z0-9]*)\\(\\)Z");
-
-    private static final ConcurrentMap<String, Class<?>> DESC_CLASS_CACHE = new ConcurrentHashMap<String, Class<?>>();
-
-    private static final ConcurrentMap<String, Class<?>> NAME_CLASS_CACHE = new ConcurrentHashMap<String, Class<?>>();
-
-    private static final ConcurrentMap<String, Method> SIGNATURE_METHODS_CACHE = new ConcurrentHashMap<String, Method>();
+    public static final Pattern IS_HAS_CAN_METHOD_DESC_PATTERN =
+            Pattern.compile("(?:is|has|can)([A-Z][_a-zA-Z0-9]*)\\(\\)Z");
 
     private static Map<Class<?>, Object> primitiveDefaults = new HashMap<>();
 
@@ -150,19 +148,22 @@ public final class ReflectUtils {
         primitiveDefaults.put(void.class, null);
     }
 
-    private ReflectUtils() {
-    }
+    private ReflectUtils() {}
 
     public static boolean isPrimitives(Class<?> cls) {
-        if (cls.isArray()) {
-            return isPrimitive(cls.getComponentType());
+        while (cls.isArray()) {
+            cls = cls.getComponentType();
         }
         return isPrimitive(cls);
     }
 
     public static boolean isPrimitive(Class<?> cls) {
-        return cls.isPrimitive() || cls == String.class || cls == Boolean.class || cls == Character.class
-                || Number.class.isAssignableFrom(cls) || Date.class.isAssignableFrom(cls);
+        return cls.isPrimitive()
+                || cls == String.class
+                || cls == Boolean.class
+                || cls == Character.class
+                || Number.class.isAssignableFrom(cls)
+                || Date.class.isAssignableFrom(cls);
     }
 
     public static Class<?> getBoxedClass(Class<?> c) {
@@ -261,8 +262,7 @@ public final class ReflectUtils {
             do {
                 sb.append("[]");
                 c = c.getComponentType();
-            }
-            while (c.isArray());
+            } while (c.isArray());
 
             return c.getName() + sb.toString();
         }
@@ -322,19 +322,19 @@ public final class ReflectUtils {
 
     public static String getSignature(String methodName, Class<?>[] parameterTypes) {
         StringBuilder sb = new StringBuilder(methodName);
-        sb.append("(");
+        sb.append('(');
         if (parameterTypes != null && parameterTypes.length > 0) {
             boolean first = true;
             for (Class<?> type : parameterTypes) {
                 if (first) {
                     first = false;
                 } else {
-                    sb.append(",");
+                    sb.append(',');
                 }
                 sb.append(type.getName());
             }
         }
-        sb.append(")");
+        sb.append(')');
         return sb.toString();
     }
 
@@ -597,7 +597,7 @@ public final class ReflectUtils {
             name = name.substring(0, index);
         }
         while (c-- > 0) {
-            sb.append("[");
+            sb.append('[');
         }
         if ("void".equals(name)) {
             sb.append(JVM_VOID);
@@ -729,7 +729,7 @@ public final class ReflectUtils {
         if (c > 0) {
             StringBuilder sb = new StringBuilder();
             while (c-- > 0) {
-                sb.append("[");
+                sb.append('[');
             }
 
             if ("void".equals(name)) {
@@ -788,12 +788,7 @@ public final class ReflectUtils {
         if (cl == null) {
             cl = ClassUtils.getClassLoader();
         }
-        Class<?> clazz = NAME_CLASS_CACHE.get(name);
-        if (clazz == null) {
-            clazz = Class.forName(name, true, cl);
-            NAME_CLASS_CACHE.put(name, clazz);
-        }
-        return clazz;
+        return Class.forName(name, true, cl);
     }
 
     /**
@@ -854,12 +849,7 @@ public final class ReflectUtils {
         if (cl == null) {
             cl = ClassUtils.getClassLoader();
         }
-        Class<?> clazz = DESC_CLASS_CACHE.get(desc);
-        if (clazz == null) {
-            clazz = Class.forName(desc, true, cl);
-            DESC_CLASS_CACHE.put(desc, clazz);
-        }
-        return clazz;
+        return Class.forName(desc, true, cl);
     }
 
     /**
@@ -887,7 +877,7 @@ public final class ReflectUtils {
             return EMPTY_CLASS_ARRAY;
         }
 
-        List<Class<?>> cs = new ArrayList<Class<?>>();
+        List<Class<?>> cs = new ArrayList<>();
         Matcher m = DESC_PATTERN.matcher(desc);
         while (m.find()) {
             cs.add(desc2class(cl, m.group()));
@@ -904,19 +894,14 @@ public final class ReflectUtils {
      * @throws NoSuchMethodException
      * @throws ClassNotFoundException
      * @throws IllegalStateException  when multiple methods are found (overridden method when parameter info is not provided)
+     * @deprecated Recommend {@link MethodUtils#findMethod(Class, String, Class[])}
      */
+    @Deprecated
     public static Method findMethodByMethodSignature(Class<?> clazz, String methodName, String[] parameterTypes)
             throws NoSuchMethodException, ClassNotFoundException {
-        String signature = clazz.getName() + "." + methodName;
-        if (parameterTypes != null && parameterTypes.length > 0) {
-            signature += StringUtils.join(parameterTypes);
-        }
-        Method method = SIGNATURE_METHODS_CACHE.get(signature);
-        if (method != null) {
-            return method;
-        }
+        Method method;
         if (parameterTypes == null) {
-            List<Method> finded = new ArrayList<Method>();
+            List<Method> finded = new ArrayList<>();
             for (Method m : clazz.getMethods()) {
                 if (m.getName().equals(methodName)) {
                     finded.add(m);
@@ -926,7 +911,8 @@ public final class ReflectUtils {
                 throw new NoSuchMethodException("No such method " + methodName + " in class " + clazz);
             }
             if (finded.size() > 1) {
-                String msg = String.format("Not unique method for method name(%s) in class(%s), find %d methods.",
+                String msg = String.format(
+                        "Not unique method for method name(%s) in class(%s), find %d methods.",
                         methodName, clazz.getName(), finded.size());
                 throw new IllegalStateException(msg);
             }
@@ -937,12 +923,20 @@ public final class ReflectUtils {
                 types[i] = ReflectUtils.name2class(parameterTypes[i]);
             }
             method = clazz.getMethod(methodName, types);
-
         }
-        SIGNATURE_METHODS_CACHE.put(signature, method);
         return method;
     }
 
+    /**
+     * @param clazz      Target class to find method
+     * @param methodName Method signature, e.g.: method1(int, String). It is allowed to provide method name only, e.g.: method2
+     * @return target method
+     * @throws NoSuchMethodException
+     * @throws ClassNotFoundException
+     * @throws IllegalStateException  when multiple methods are found (overridden method when parameter info is not provided)
+     * @deprecated Recommend {@link MethodUtils#findMethod(Class, String, Class[])}
+     */
+    @Deprecated
     public static Method findMethodByMethodName(Class<?> clazz, String methodName)
             throws NoSuchMethodException, ClassNotFoundException {
         return findMethodByMethodSignature(clazz, methodName, null);
@@ -951,7 +945,7 @@ public final class ReflectUtils {
     public static Constructor<?> findConstructor(Class<?> clazz, Class<?> paramType) throws NoSuchMethodException {
         Constructor<?> targetConstructor;
         try {
-            targetConstructor = clazz.getConstructor(new Class<?>[]{paramType});
+            targetConstructor = clazz.getConstructor(new Class<?>[] {paramType});
         } catch (NoSuchMethodException e) {
             targetConstructor = null;
             Constructor<?>[] constructors = clazz.getConstructors();
@@ -982,8 +976,8 @@ public final class ReflectUtils {
      */
     public static boolean isInstance(Object obj, String interfaceClazzName) {
         for (Class<?> clazz = obj.getClass();
-             clazz != null && !clazz.equals(Object.class);
-             clazz = clazz.getSuperclass()) {
+                clazz != null && !clazz.equals(Object.class);
+                clazz = clazz.getSuperclass()) {
             Class<?>[] interfaces = clazz.getInterfaces();
             for (Class<?> itf : interfaces) {
                 if (itf.getName().equals(interfaceClazzName)) {
@@ -1051,7 +1045,7 @@ public final class ReflectUtils {
         try {
             Object value = emptyInstances.get(returnType);
             if (value == null) {
-                value = returnType.newInstance();
+                value = returnType.getDeclaredConstructor().newInstance();
                 emptyInstances.put(returnType, value);
             }
             Class<?> cls = value.getClass();
@@ -1104,7 +1098,8 @@ public final class ReflectUtils {
                 && method.getDeclaringClass() != Object.class
                 && method.getParameterTypes().length == 0
                 && ((method.getName().startsWith("get") && method.getName().length() > 3)
-                || (method.getName().startsWith("is") && method.getName().length() > 2));
+                        || (method.getName().startsWith("is")
+                                && method.getName().length() > 2));
     }
 
     public static String getPropertyNameFromBeanReadMethod(Method method) {
@@ -1147,12 +1142,11 @@ public final class ReflectUtils {
     }
 
     public static Map<String, Field> getBeanPropertyFields(Class cl) {
-        Map<String, Field> properties = new HashMap<String, Field>();
+        Map<String, Field> properties = new HashMap<>();
         for (; cl != null; cl = cl.getSuperclass()) {
             Field[] fields = cl.getDeclaredFields();
             for (Field field : fields) {
-                if (Modifier.isTransient(field.getModifiers())
-                        || Modifier.isStatic(field.getModifiers())) {
+                if (Modifier.isTransient(field.getModifiers()) || Modifier.isStatic(field.getModifiers())) {
                     continue;
                 }
 
@@ -1166,7 +1160,7 @@ public final class ReflectUtils {
     }
 
     public static Map<String, Method> getBeanPropertyReadMethods(Class cl) {
-        Map<String, Method> properties = new HashMap<String, Method>();
+        Map<String, Method> properties = new HashMap<>();
         for (; cl != null; cl = cl.getSuperclass()) {
             Method[] methods = cl.getDeclaredMethods();
             for (Method method : methods) {
@@ -1190,6 +1184,9 @@ public final class ReflectUtils {
                 if (actualArgType instanceof ParameterizedType) {
                     returnType = (Class<?>) ((ParameterizedType) actualArgType).getRawType();
                     genericReturnType = actualArgType;
+                } else if (actualArgType instanceof TypeVariable) {
+                    returnType = (Class<?>) ((TypeVariable<?>) actualArgType).getBounds()[0];
+                    genericReturnType = actualArgType;
                 } else {
                     returnType = (Class<?>) actualArgType;
                     genericReturnType = returnType;
@@ -1199,7 +1196,7 @@ public final class ReflectUtils {
                 genericReturnType = null;
             }
         }
-        return new Type[]{returnType, genericReturnType};
+        return new Type[] {returnType, genericReturnType};
     }
 
     /**
@@ -1216,21 +1213,18 @@ public final class ReflectUtils {
         genericTypes.add(sourceClass.getGenericSuperclass());
 
         Set<ParameterizedType> parameterizedTypes = genericTypes.stream()
-                .filter(type -> type instanceof ParameterizedType)// filter ParameterizedType
-                .map(type -> ParameterizedType.class.cast(type))  // cast to ParameterizedType
+                .filter(type -> type instanceof ParameterizedType) // filter ParameterizedType
+                .map(ParameterizedType.class::cast) // cast to ParameterizedType
                 .collect(Collectors.toSet());
 
         if (parameterizedTypes.isEmpty()) { // If not found, try to search super types recursively
             genericTypes.stream()
                     .filter(type -> type instanceof Class)
-                    .map(type -> Class.class.cast(type))
-                    .forEach(superClass -> {
-                        parameterizedTypes.addAll(findParameterizedTypes(superClass));
-                    });
+                    .map(Class.class::cast)
+                    .forEach(superClass -> parameterizedTypes.addAll(findParameterizedTypes(superClass)));
         }
 
-        return unmodifiableSet(parameterizedTypes);                     // build as a Set
-
+        return unmodifiableSet(parameterizedTypes); // build as a Set
     }
 
     /**
@@ -1282,14 +1276,34 @@ public final class ReflectUtils {
                         try {
                             return method.getMethod().invoke(bean);
                         } catch (Exception e) {
-                            //ignore
+                            // ignore
                         }
                         return null;
-                    }).get();
+                    })
+                    .get();
         } catch (Exception e) {
 
         }
         return propertyValue;
+    }
+
+    /**
+     * Check target bean class whether has specify method
+     * @param beanClass
+     * @param methodName
+     * @return
+     */
+    public static boolean hasMethod(Class<?> beanClass, String methodName) {
+        try {
+            BeanInfo beanInfo = Introspector.getBeanInfo(beanClass);
+            Optional<MethodDescriptor> descriptor = Stream.of(beanInfo.getMethodDescriptors())
+                    .filter(methodDescriptor -> methodName.equals(methodDescriptor.getName()))
+                    .findFirst();
+            return descriptor.isPresent();
+        } catch (Exception e) {
+
+        }
+        return false;
     }
 
     /**
@@ -1315,5 +1329,70 @@ public final class ReflectUtils {
         }
 
         return types;
+    }
+
+    public static boolean checkZeroArgConstructor(Class clazz) {
+        try {
+            clazz.getDeclaredConstructor();
+            return true;
+        } catch (NoSuchMethodException e) {
+            return false;
+        }
+    }
+
+    public static boolean isJdk(Class clazz) {
+        return clazz.getName().startsWith("java.") || clazz.getName().startsWith("javax.");
+    }
+
+    /**
+     * Copy from org.springframework.util.ReflectionUtils.
+     * Make the given method accessible, explicitly setting it accessible if
+     * necessary. The {@code setAccessible(true)} method is only called
+     * when actually necessary, to avoid unnecessary conflicts with a JVM
+     * SecurityManager (if active).
+     * @param method the method to make accessible
+     * @see java.lang.reflect.Method#setAccessible
+     */
+    @SuppressWarnings("deprecation") // on JDK 9
+    public static void makeAccessible(Method method) {
+        if ((!Modifier.isPublic(method.getModifiers())
+                        || !Modifier.isPublic(method.getDeclaringClass().getModifiers()))
+                && !method.isAccessible()) {
+            method.setAccessible(true);
+        }
+    }
+
+    /**
+     * Get all field names of target type
+     * @param type
+     * @return
+     */
+    public static Set<String> getAllFieldNames(Class<?> type) {
+
+        Set<String> fieldNames = new HashSet<>();
+        for (Field field : type.getDeclaredFields()) {
+            fieldNames.add(field.getName());
+        }
+
+        Set<Class<?>> allSuperClasses = ClassUtils.getAllSuperClasses(type);
+        for (Class<?> aClass : allSuperClasses) {
+            for (Field field : aClass.getDeclaredFields()) {
+                fieldNames.add(field.getName());
+            }
+        }
+        return fieldNames;
+    }
+
+    public static <T> T getFieldValue(Object obj, String fieldName) throws RuntimeException {
+        if (obj == null) {
+            throw new IllegalArgumentException("object is null");
+        }
+        try {
+            Field field = obj.getClass().getDeclaredField(fieldName);
+            field.setAccessible(true);
+            return (T) field.get(obj);
+        } catch (Exception e) {
+            throw new RuntimeException(e.getMessage(), e);
+        }
     }
 }
