@@ -19,10 +19,13 @@ package org.apache.dubbo.rpc.filter;
 import org.apache.dubbo.common.beanutil.JavaBeanAccessor;
 import org.apache.dubbo.common.beanutil.JavaBeanDescriptor;
 import org.apache.dubbo.common.beanutil.JavaBeanSerializeUtil;
+import org.apache.dubbo.common.compact.Dubbo2CompactUtils;
+import org.apache.dubbo.common.compact.Dubbo2GenericExceptionUtils;
 import org.apache.dubbo.common.constants.CommonConstants;
 import org.apache.dubbo.common.extension.Activate;
-import org.apache.dubbo.common.logger.Logger;
+import org.apache.dubbo.common.logger.ErrorTypeAwareLogger;
 import org.apache.dubbo.common.logger.LoggerFactory;
+import org.apache.dubbo.common.utils.DefaultSerializeClassChecker;
 import org.apache.dubbo.common.utils.PojoUtils;
 import org.apache.dubbo.common.utils.ReflectUtils;
 import org.apache.dubbo.rpc.Constants;
@@ -32,6 +35,7 @@ import org.apache.dubbo.rpc.Invoker;
 import org.apache.dubbo.rpc.Result;
 import org.apache.dubbo.rpc.RpcException;
 import org.apache.dubbo.rpc.RpcInvocation;
+import org.apache.dubbo.rpc.model.ModuleModel;
 import org.apache.dubbo.rpc.service.GenericService;
 import org.apache.dubbo.rpc.support.ProtocolUtils;
 import org.apache.dubbo.rpc.support.RpcUtils;
@@ -44,6 +48,7 @@ import java.lang.reflect.Type;
 import static org.apache.dubbo.common.constants.CommonConstants.$INVOKE;
 import static org.apache.dubbo.common.constants.CommonConstants.$INVOKE_ASYNC;
 import static org.apache.dubbo.common.constants.CommonConstants.GENERIC_PARAMETER_DESC;
+import static org.apache.dubbo.common.constants.LoggerCodeConstants.COMMON_REFLECTIVE_OPERATION_FAILED;
 import static org.apache.dubbo.rpc.Constants.GENERIC_KEY;
 
 /**
@@ -52,11 +57,18 @@ import static org.apache.dubbo.rpc.Constants.GENERIC_KEY;
 @Activate(group = CommonConstants.CONSUMER, value = GENERIC_KEY, order = 20000)
 public class GenericImplFilter implements Filter, Filter.Listener {
 
-    private static final Logger logger = LoggerFactory.getLogger(GenericImplFilter.class);
+    private static final ErrorTypeAwareLogger logger = LoggerFactory.getErrorTypeAwareLogger(GenericImplFilter.class);
 
-    private static final Class<?>[] GENERIC_PARAMETER_TYPES = new Class<?>[]{String.class, String[].class, Object[].class};
+    private static final Class<?>[] GENERIC_PARAMETER_TYPES =
+            new Class<?>[] {String.class, String[].class, Object[].class};
 
     private static final String GENERIC_IMPL_MARKER = "GENERIC_IMPL";
+
+    private final ModuleModel moduleModel;
+
+    public GenericImplFilter(ModuleModel moduleModel) {
+        this.moduleModel = moduleModel;
+    }
 
     @Override
     public Result invoke(Invoker<?> invoker, Invocation invocation) throws RpcException {
@@ -97,7 +109,7 @@ public class GenericImplFilter implements Filter, Filter.Listener {
             }
             invocation2.setParameterTypes(GENERIC_PARAMETER_TYPES);
             invocation2.setParameterTypesDesc(GENERIC_PARAMETER_DESC);
-            invocation2.setArguments(new Object[]{methodName, types, args});
+            invocation2.setArguments(new Object[] {methodName, types, args});
             return invoker.invoke(invocation2);
         }
         // making a generic call to a normal service
@@ -107,26 +119,29 @@ public class GenericImplFilter implements Filter, Filter.Listener {
             if (ProtocolUtils.isJavaGenericSerialization(generic)) {
 
                 for (Object arg : args) {
-                    if (!(byte[].class == arg.getClass())) {
+                    if (byte[].class != arg.getClass()) {
                         error(generic, byte[].class.getName(), arg.getClass().getName());
                     }
                 }
             } else if (ProtocolUtils.isBeanGenericSerialization(generic)) {
                 for (Object arg : args) {
-                    if (!(arg instanceof JavaBeanDescriptor)) {
-                        error(generic, JavaBeanDescriptor.class.getName(), arg.getClass().getName());
+                    if (arg != null && !(arg instanceof JavaBeanDescriptor)) {
+                        error(
+                                generic,
+                                JavaBeanDescriptor.class.getName(),
+                                arg.getClass().getName());
                     }
                 }
             }
 
-            invocation.setAttachment(
-                    GENERIC_KEY, invoker.getUrl().getParameter(GENERIC_KEY));
+            invocation.setAttachment(GENERIC_KEY, invoker.getUrl().getParameter(GENERIC_KEY));
         }
         return invoker.invoke(invocation);
     }
 
     private void error(String generic, String expected, String actual) throws RpcException {
-        throw new RpcException("Generic serialization [" + generic + "] only support message type " + expected + " and your message type is " + actual);
+        throw new RpcException("Generic serialization [" + generic + "] only support message type " + expected
+                + " and your message type is " + actual);
     }
 
     @Override
@@ -140,13 +155,14 @@ public class GenericImplFilter implements Filter, Filter.Listener {
                 Object value = appResponse.getValue();
                 try {
                     Class<?> invokerInterface = invoker.getInterface();
-                    if (!$INVOKE.equals(methodName) && !$INVOKE_ASYNC.equals(methodName)
+                    if (!$INVOKE.equals(methodName)
+                            && !$INVOKE_ASYNC.equals(methodName)
                             && invokerInterface.isAssignableFrom(GenericService.class)) {
                         try {
                             // find the real interface from url
                             String realInterface = invoker.getUrl().getParameter(Constants.INTERFACE);
                             invokerInterface = ReflectUtils.forName(realInterface);
-                        } catch (Throwable e) {
+                        } catch (Exception e) {
                             // ignore
                         }
                     }
@@ -158,7 +174,9 @@ public class GenericImplFilter implements Filter, Filter.Listener {
                         } else if (value instanceof JavaBeanDescriptor) {
                             appResponse.setValue(JavaBeanSerializeUtil.deserialize((JavaBeanDescriptor) value));
                         } else {
-                            throw new RpcException("The type of result value is " + value.getClass().getName() + " other than " + JavaBeanDescriptor.class.getName() + ", and the result is " + value);
+                            throw new RpcException("The type of result value is "
+                                    + value.getClass().getName() + " other than " + JavaBeanDescriptor.class.getName()
+                                    + ", and the result is " + value);
                         }
                     } else {
                         Type[] types = ReflectUtils.getReturnTypes(method);
@@ -167,20 +185,33 @@ public class GenericImplFilter implements Filter, Filter.Listener {
                 } catch (NoSuchMethodException e) {
                     throw new RpcException(e.getMessage(), e);
                 }
-            } else if (appResponse.getException() instanceof com.alibaba.dubbo.rpc.service.GenericException) {
-                com.alibaba.dubbo.rpc.service.GenericException exception = (com.alibaba.dubbo.rpc.service.GenericException) appResponse.getException();
+            } else if (Dubbo2CompactUtils.isEnabled()
+                    && Dubbo2GenericExceptionUtils.isGenericExceptionClassLoaded()
+                    && Dubbo2GenericExceptionUtils.getGenericExceptionClass()
+                            .isAssignableFrom(appResponse.getException().getClass())) {
+                // TODO we should cast if is apache GenericException or not?
+                org.apache.dubbo.rpc.service.GenericException exception =
+                        (org.apache.dubbo.rpc.service.GenericException) appResponse.getException();
                 try {
                     String className = exception.getExceptionClass();
-                    Class<?> clazz = ReflectUtils.forName(className);
+                    DefaultSerializeClassChecker classChecker = moduleModel
+                            .getApplicationModel()
+                            .getFrameworkModel()
+                            .getBeanFactory()
+                            .getBean(DefaultSerializeClassChecker.class);
+                    Class<?> clazz =
+                            classChecker.loadClass(Thread.currentThread().getContextClassLoader(), className);
                     Throwable targetException = null;
                     Throwable lastException = null;
                     try {
-                        targetException = (Throwable) clazz.newInstance();
+                        targetException =
+                                (Throwable) clazz.getDeclaredConstructor().newInstance();
                     } catch (Throwable e) {
                         lastException = e;
                         for (Constructor<?> constructor : clazz.getConstructors()) {
                             try {
-                                targetException = (Throwable) constructor.newInstance(new Object[constructor.getParameterTypes().length]);
+                                targetException = (Throwable)
+                                        constructor.newInstance(new Object[constructor.getParameterTypes().length]);
                                 break;
                             } catch (Throwable e1) {
                                 lastException = e1;
@@ -195,23 +226,24 @@ public class GenericImplFilter implements Filter, Filter.Listener {
                             }
                             field.set(targetException, exception.getExceptionMessage());
                         } catch (Throwable e) {
-                            logger.warn(e.getMessage(), e);
+                            logger.warn(COMMON_REFLECTIVE_OPERATION_FAILED, "", "", e.getMessage(), e);
                         }
                         appResponse.setException(targetException);
                     } else if (lastException != null) {
                         throw lastException;
                     }
                 } catch (Throwable e) {
-                    throw new RpcException("Can not deserialize exception " + exception.getExceptionClass() + ", message: " + exception.getExceptionMessage(), e);
+                    throw new RpcException(
+                            "Can not deserialize exception " + exception.getExceptionClass() + ", message: "
+                                    + exception.getExceptionMessage(),
+                            e);
                 }
             }
         }
     }
 
     @Override
-    public void onError(Throwable t, Invoker<?> invoker, Invocation invocation) {
-
-    }
+    public void onError(Throwable t, Invoker<?> invoker, Invocation invocation) {}
 
     private boolean isCallingGenericImpl(String generic, Invocation invocation) {
         return ProtocolUtils.isGeneric(generic)
@@ -220,10 +252,10 @@ public class GenericImplFilter implements Filter, Filter.Listener {
     }
 
     private boolean isMakingGenericCall(String generic, Invocation invocation) {
-        return (invocation.getMethodName().equals($INVOKE) || invocation.getMethodName().equals($INVOKE_ASYNC))
+        return (invocation.getMethodName().equals($INVOKE)
+                        || invocation.getMethodName().equals($INVOKE_ASYNC))
                 && invocation.getArguments() != null
                 && invocation.getArguments().length == 3
                 && ProtocolUtils.isGeneric(generic);
     }
-
 }
